# rusty-foam

./: Cargo.toml  README.md
.github/workflows/: rust-lint.yml  rust-test.yml
src/: byte_stream.rs  lib.rs
